syntax = "proto3";
option go_package = "github/pwera/grpc-micros/grpc";
import "validator.proto";

message CreatePaymentRequest {
  float price = 1;
  int32 user_id = 2 [(validator.field) = {int_gt: 0, int_lt: 10000}];
  int32 order_id = 3;
  float total_price = 4;
}

message CreatePaymentResponse {
  int64 bill_id = 1;
  int64 payment_id = 2;
}

service PaymentService {
  rpc Create(CreatePaymentRequest) returns (CreatePaymentResponse) {}
}